feat: Implement OpenAI-compatible endpoints and Docker support for async server

--- a/.gitignore
+++ b/.gitignore
@@ -180,4 +180,5 @@ wandb
 # example images
 examples/server-async/images
 examples/server-async/experiments
-
+images/
+examples/server-async/PLAN.md
